# NudiCodex

./: .gitattributes  .gitignore  CONFIGURATION_SUMMARY.md  FRONTEND_SETUP.md  LOGGING_SUMMARY.md  README.md  SETUP_SUMMARY.md
backend/: .pre-commit-config.yaml  CONFIG_GUIDE.md  LOGGING_GUIDE.md  Makefile  Makefile.ps1  README.md  SETUP.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/core/: __init__.py  config.py  logging.py  logging_config.py  middleware.py
backend/app/db/: __init__.py
backend/app/models/: __init__.py
backend/tests/: __init__.py  conftest.py  test_config.py  test_logging.py  test_main.py  test_middleware.py
data/: README.md
docs/: README.md
frontend/: .env.example  .eslintignore  .eslintrc.cjs  .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/auth/: authService.ts  useAuthInit.ts
frontend/src/components/: CollectionButtons.tsx  FilterBar.tsx  Layout.tsx  ProgressRing.tsx  RegionBadge.tsx  RequireAuth.tsx  SeenToggle.tsx  SpeciesCard.tsx  SpeciesImage.tsx  SpecimenReadout.tsx  index.ts
frontend/src/data/: achievements.ts  attribution.md  regions.ts  species.ts
frontend/src/hooks/: index.ts  useNudibranchQuery.ts
frontend/src/pages/: Auth.tsx  DexGrid.tsx  NotFound.tsx  Profile.tsx  Progress.tsx  SpeciesDetail.tsx  index.ts
frontend/src/services/: api.ts  nudibranch.service.ts
frontend/src/store/: appStore.ts  authStore.ts  collectionStore.ts  index.ts
frontend/src/types/: api.ts  index.ts  nudibranch.ts
frontend/src/utils/: formatters.ts  images.ts  index.ts  validation.ts
infrastructure/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
scripts/: README.md
